--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -556,6 +556,10 @@ video {
   position: relative;
 }
 
+.inset-0{
+  inset: 0px;
+}
+
 .inset-x-0{
   left: 0px;
   right: 0px;
@@ -597,6 +601,10 @@ video {
   top: 100%;
 }
 
+.z-30{
+  z-index: 30;
+}
+
 .z-\[3\]{
   z-index: 3;
 }
@@ -604,6 +612,11 @@ video {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-1{
@@ -873,6 +886,10 @@ video {
   width: max-content;
 }
 
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -917,6 +934,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
 .place-items-center{
   place-items: center;
 }
@@ -931,6 +952,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -1043,6 +1068,10 @@ video {
   border-top-color: rgb(209 213 219 / 0.4);
 }
 
+.bg-black\/60{
+  background-color: rgb(0 0 0 / 0.6);
+}
+
 .bg-emerald-600{
   --tw-bg-opacity: 1;
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
@@ -1120,6 +1149,10 @@ video {
 
 .p-6{
   padding: 1.5rem;
+}
+
+.p-8{
+  padding: 2rem;
 }
 
 .p-\[1px\]{
@@ -1234,6 +1267,10 @@ video {
 
 .pb-8{
   padding-bottom: 2rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
 }
 
 .pt-11{
@@ -1362,6 +1399,16 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
+}
+
 *, 
 *::before, 
 *::after{
@@ -1422,7 +1469,7 @@ select{
   position: fixed;
   top: 2.5rem;
   left: 50%;
-  z-index: 30;
+  z-index: 40;
   width: -moz-max-content;
   width: max-content;
   --tw-translate-x: -50%;
@@ -1751,6 +1798,43 @@ td{
   padding: 1rem;
 }
 
+.inv_link{
+  display: grid;
+  height: 2.5rem;
+  place-items: center;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 10px;
+  font-weight: 500;
+}
+
+.inv_link.active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 215 252 / var(--tw-bg-opacity));
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(81 56 238 / var(--tw-text-opacity));
+}
+
+.inv_tabs{
+  padding-bottom: 0.5rem;
+  font-size: 11px;
+  font-weight: 500;
+  color: rgb(0 0 0 / 0.6);
+}
+
+.inv_tabs.active{
+  border-bottom-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(81 56 238 / var(--tw-border-opacity));
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(81 56 238 / var(--tw-text-opacity));
+}
+
 .stats-chart{
   width: 100% !important;
   height: 100% !important;
@@ -1766,6 +1850,20 @@ td{
 
 .last\:border-none:last-child{
   border-style: none;
+}
+
+.hover\:bg-gray-200:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary-theme:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 215 252 / var(--tw-bg-opacity));
+}
+
+.disabled\:cursor-not-allowed:disabled{
+  cursor: not-allowed;
 }
 
 .disabled\:cursor-wait:disabled{
