--- a/resources/styles/input.css
+++ b/resources/styles/input.css
@@ -148,11 +148,11 @@ td{
 }
 
 .summary-wrapper{
-  @apply w-full flex justify-center gap-3;
+  @apply w-full flex flex-wrap flex-col sm:flex-row justify-center gap-3;
 }
 
 .order-view-card{
-  @apply w-[50%] md:w-[20%] bg-white rounded-xl p-4;
+  @apply w-full sm:w-[48%] md:w-[18.5%] bg-white rounded-xl p-4;
 }
 
 .order-stats{
